Unclickable button mobile render fix

--- a/style/components.css
+++ b/style/components.css
@@ -45,6 +45,7 @@ main {
    /* max-width: 600px; */
     background: rgb(255, 255, 255, 0.25);
     color: white;
+    min-width: 200px;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -54,7 +55,6 @@ main {
     flex: 1;
     align-items: center; /* Zentriert die Buttons horizontal */
     justify-content: center; /* Optional: Zentriert die Buttons vertikal */
-    height: 20px; /* Falls du sie auch vertikal zentrieren möchtest */ 
     transition: all 0.5s ease;
 }
 
@@ -67,18 +67,14 @@ main {
     border: none;
     cursor: pointer;
     border-radius: 5px;
-    margin-top: 10px;
+    margin: 10px;
     display: block;
-    margin-bottom: 15px;
-    position: absolute;
-    top: 320px; /* Position relativ zum nächsten positionierten Vorfahren */
-    left: 50%; /* Zentriert den Button horizontal */
-    transform: translateX(-50%); /* Korrigiert die Zentrierung */
 } .button1:hover {
     background-color: #ff0000;
 } .button1placeholder {
-    height: 40px; /* Höhe des Buttons */
-    margin-bottom: 15px; /* Gleicher Abstand wie der Button */
+    height: 38px; /* Höhe des Buttons */
+    margin: 10px; /* Gleicher Abstand wie der Button */
+    display: none;
 }
 
 .button2 {
